--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@readr/contracts": "file:../../packages/contracts",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
